--- a/RequestTopicExpert/project.json
+++ b/RequestTopicExpert/project.json
@@ -2,8 +2,9 @@
   "frameworks": {
     "net46":{
       "dependencies": {
-        "SendGrid": "8.0.4"
-        }
+        "SendGrid": "8.0.4",
+        "Microsoft.Azure.DocumentDB": "1.9.5"
+        },
     }
    }
 }
